--- a/week2-evolution/01_evolve_steering/index.html
+++ b/week2-evolution/01_evolve_steering/index.html
@@ -2,10 +2,12 @@
 
 <head>
     <title>The Nature of Code Example Evolve Steering</title>
-    <script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/p5.js"></script>
-    <script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/addons/p5.dom.js"></script>
+    <script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/p5.js"></script>
+    <script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/addons/p5.dom.js"></script>
     <script language="javascript" type="text/javascript" src="vehicle.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
+	<script language="javascript" type="text/javascript" src="animatedsprite.js"></script>
+	<script language="javascript" type="text/javascript" src="explosion.js"></script>
 </head>
 
 <body>
